z-index fix

--- a/assets/css/_home.css
+++ b/assets/css/_home.css
@@ -131,7 +131,7 @@ hm-product-sec-wrp
 	-ms-transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
 	transform: translateY(-50%);
-	z-index: 5;
+	z-index: 4;
 	background: url(../images/leftArrow.png);
 	background-size: 42px 42px;
 }
@@ -143,7 +143,7 @@ hm-product-sec-wrp
 	-ms-transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
 	transform: translateY(-50%);
-	z-index: 5;	
+	z-index: 4;	
 	background: url(../images/rightArrow.png);
 	background-size: 42px 42px;
 }
